switch back xgboost code

--- a/Code/Classification/SVM/SVM_Predictions_VGG.ipynb
+++ b/Code/Classification/SVM/SVM_Predictions_VGG.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,145 +46,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all test data\n",
+      "VGG test data\n",
       "          Class                            harmonized_filename  \\\n",
-      "0        Pickup        Pickup_test_orig_test_05620_resized.jpg   \n",
-      "1           SUV           SUV_test_orig_test_08041_resized.jpg   \n",
-      "2   Convertible   Convertible_test_orig_test_00822_resized.jpg   \n",
-      "3   Convertible   Convertible_test_orig_test_00618_resized.jpg   \n",
-      "4        Pickup        Pickup_test_orig_test_05241_resized.jpg   \n",
+      "0           SUV           SUV_test_orig_test_05204_resized.jpg   \n",
+      "1         Sedan         Sedan_test_orig_test_01445_resized.jpg   \n",
+      "2        Pickup        Pickup_test_orig_test_01801_resized.jpg   \n",
+      "3         Sedan        Sedan_test_orig_train_02900_resized.jpg   \n",
+      "4   Convertible  Convertible_test_orig_train_07925_resized.jpg   \n",
       "..          ...                                            ...   \n",
-      "88        Sedan         Sedan_test_orig_test_03443_resized.jpg   \n",
-      "89       Pickup       Pickup_test_orig_train_04088_resized.jpg   \n",
-      "90        Sedan        Sedan_test_orig_train_03673_resized.jpg   \n",
-      "91        Sedan        Sedan_test_orig_train_06616_resized.jpg   \n",
-      "92  Convertible  Convertible_test_orig_train_05861_resized.jpg   \n",
+      "88       Pickup        Pickup_test_orig_test_05241_resized.jpg   \n",
+      "89  Convertible  Convertible_test_orig_train_04435_resized.jpg   \n",
+      "90        Sedan         Sedan_test_orig_test_00105_resized.jpg   \n",
+      "91       Pickup        Pickup_test_orig_test_07521_resized.jpg   \n",
+      "92          SUV           SUV_test_orig_test_06507_resized.jpg   \n",
       "\n",
       "                                      image_path_blur  \\\n",
-      "0   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
-      "1   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
-      "2   ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "3   ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "4   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "0   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
+      "1   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "2   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "3   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "4   ../../../Images/test/Blurred/Convertible_test_...   \n",
       "..                                                ...   \n",
-      "88  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "89  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "88  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "89  ../../../Images/test/Blurred/Convertible_test_...   \n",
       "90  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "91  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "92  ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "91  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "92  ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
       "\n",
       "                                   image_path_no_blur  \\\n",
-      "0   ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
-      "1   ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
-      "2   ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "3   ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "4   ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "0   ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
+      "1   ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
+      "2   ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "3   ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
+      "4   ../../../Images/test/No_Blur/Convertible_test_...   \n",
       "..                                                ...   \n",
-      "88  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "89  ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "88  ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "89  ../../../Images/test/No_Blur/Convertible_test_...   \n",
       "90  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "91  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "92  ../../../Images/test/No_Blur/Convertible_test_...   \n",
+      "91  ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "92  ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
       "\n",
-      "    ViT_Embedding_Element_0  ViT_Embedding_Element_1  ViT_Embedding_Element_2  \\\n",
-      "0                 -0.347766                 0.167595                 0.154336   \n",
-      "1                 -0.098150                 0.112476                -0.029927   \n",
-      "2                 -0.203125                 0.251158                -0.324457   \n",
-      "3                 -0.211059                 0.216949                -0.437562   \n",
-      "4                 -0.258407                 0.309153                 0.115703   \n",
+      "    VGG_Embedding_Element_0  VGG_Embedding_Element_1  VGG_Embedding_Element_2  \\\n",
+      "0                  0.256886                 0.014705                 0.000000   \n",
+      "1                  0.017299                 1.080279                 0.000000   \n",
+      "2                  0.261010                 0.370242                 0.019681   \n",
+      "3                  0.056710                 0.937881                 0.022163   \n",
+      "4                  0.032715                 0.032935                 0.004446   \n",
       "..                      ...                      ...                      ...   \n",
-      "88                -0.170689                 0.167469                -0.165911   \n",
-      "89                -0.249416                 0.215597                 0.156529   \n",
-      "90                -0.040393                 0.276296                -0.051275   \n",
-      "91                -0.114089                 0.125190                -0.260922   \n",
-      "92                -0.161454                 0.394140                -0.254677   \n",
+      "88                 0.000000                 0.206162                 0.025580   \n",
+      "89                 0.074408                 0.381188                 0.000000   \n",
+      "90                 0.001813                 0.056266                 0.016630   \n",
+      "91                 0.352758                 0.145790                 0.163916   \n",
+      "92                 0.041941                 0.094810                 0.056781   \n",
       "\n",
-      "    ViT_Embedding_Element_3  ViT_Embedding_Element_4  ViT_Embedding_Element_5  \\\n",
-      "0                 -0.086329                -0.084096                 0.403538   \n",
-      "1                 -0.390461                 0.041179                 0.271308   \n",
-      "2                 -0.320937                -0.232326                 0.130335   \n",
-      "3                 -0.345737                -0.208970                 0.345806   \n",
-      "4                  0.006585                 0.145539                 0.066159   \n",
+      "    VGG_Embedding_Element_3  VGG_Embedding_Element_4  VGG_Embedding_Element_5  \\\n",
+      "0                  0.000000                 0.185725                 0.000000   \n",
+      "1                  0.000000                 0.089484                 0.043215   \n",
+      "2                  0.024617                 0.007864                 0.000000   \n",
+      "3                  0.000000                 0.000000                 0.000000   \n",
+      "4                  0.052438                 0.000000                 0.068364   \n",
       "..                      ...                      ...                      ...   \n",
-      "88                -0.464237                -0.129780                 0.177970   \n",
-      "89                -0.240929                -0.168694                 0.354225   \n",
-      "90                -0.225824                -0.297258                 0.278150   \n",
-      "91                -0.534182                 0.093819                 0.420588   \n",
-      "92                -0.426034                 0.265536                 0.211613   \n",
+      "88                 0.000000                 0.000000                 0.000000   \n",
+      "89                 0.000000                 0.074578                 0.000000   \n",
+      "90                 0.000000                 0.000000                 0.000000   \n",
+      "91                 0.000000                 0.254776                 0.025853   \n",
+      "92                 0.013747                 0.014368                 0.000000   \n",
       "\n",
       "    ...  VGG_Embedding_Element_502  VGG_Embedding_Element_503  \\\n",
-      "0   ...                   0.022588                   1.133375   \n",
-      "1   ...                   0.000000                   0.253053   \n",
-      "2   ...                   0.000000                   0.235702   \n",
-      "3   ...                   0.128199                   0.387812   \n",
-      "4   ...                   0.036451                   0.602885   \n",
+      "0   ...                   0.168325                   0.563752   \n",
+      "1   ...                   0.089265                   0.000000   \n",
+      "2   ...                   0.477338                   0.052425   \n",
+      "3   ...                   0.057768                   0.777413   \n",
+      "4   ...                   0.055057                   0.528111   \n",
       "..  ...                        ...                        ...   \n",
-      "88  ...                   0.055077                   0.379769   \n",
-      "89  ...                   0.006549                   0.000000   \n",
-      "90  ...                   0.003398                   0.027674   \n",
-      "91  ...                   0.101564                   0.283806   \n",
-      "92  ...                   0.050454                   0.773631   \n",
+      "88  ...                   0.036451                   0.602885   \n",
+      "89  ...                   0.047582                   0.117062   \n",
+      "90  ...                   0.197001                   0.331237   \n",
+      "91  ...                   0.008566                   0.237870   \n",
+      "92  ...                   0.024904                   0.569708   \n",
       "\n",
       "    VGG_Embedding_Element_504  VGG_Embedding_Element_505  \\\n",
-      "0                    0.451472                   0.000000   \n",
-      "1                    0.224052                   0.000000   \n",
-      "2                    0.434525                   0.000162   \n",
-      "3                    0.062208                   0.000000   \n",
-      "4                    0.000000                   0.000000   \n",
+      "0                    0.057050                   0.000000   \n",
+      "1                    0.107211                   0.001121   \n",
+      "2                    0.174046                   0.000000   \n",
+      "3                    0.591298                   0.000000   \n",
+      "4                    0.102963                   0.000000   \n",
       "..                        ...                        ...   \n",
-      "88                   0.151703                   0.000000   \n",
-      "89                   0.485111                   0.000000   \n",
-      "90                   0.026551                   0.000000   \n",
-      "91                   0.220964                   0.000000   \n",
-      "92                   0.412070                   0.000000   \n",
+      "88                   0.000000                   0.000000   \n",
+      "89                   0.175089                   0.000000   \n",
+      "90                   0.022715                   0.145851   \n",
+      "91                   0.301180                   0.000000   \n",
+      "92                   0.373815                   0.037307   \n",
       "\n",
       "    VGG_Embedding_Element_506  VGG_Embedding_Element_507  \\\n",
-      "0                    0.047339                   0.154326   \n",
-      "1                    0.000000                   0.000000   \n",
-      "2                    0.000000                   0.170900   \n",
-      "3                    0.000000                   0.136773   \n",
-      "4                    0.000000                   0.035047   \n",
+      "0                    0.000000                   0.214228   \n",
+      "1                    0.000000                   0.124731   \n",
+      "2                    0.000000                   0.388359   \n",
+      "3                    0.000000                   0.036307   \n",
+      "4                    0.000000                   0.048731   \n",
       "..                        ...                        ...   \n",
-      "88                   0.001070                   0.145830   \n",
-      "89                   0.000000                   0.170164   \n",
-      "90                   0.000000                   0.117652   \n",
-      "91                   0.000000                   0.006836   \n",
-      "92                   0.000000                   0.102131   \n",
+      "88                   0.000000                   0.035047   \n",
+      "89                   0.000000                   0.000000   \n",
+      "90                   0.000000                   0.164234   \n",
+      "91                   0.000672                   0.242734   \n",
+      "92                   0.008432                   0.023078   \n",
       "\n",
       "    VGG_Embedding_Element_508  VGG_Embedding_Element_509  \\\n",
-      "0                    0.014707                   0.381150   \n",
-      "1                    0.087972                   0.227599   \n",
-      "2                    0.325055                   0.418985   \n",
-      "3                    0.318834                   0.245252   \n",
-      "4                    0.000000                   0.561562   \n",
+      "0                    0.009949                   0.132087   \n",
+      "1                    0.161692                   1.670775   \n",
+      "2                    0.008709                   0.263208   \n",
+      "3                    0.364919                   0.083522   \n",
+      "4                    0.182427                   0.000009   \n",
       "..                        ...                        ...   \n",
-      "88                   0.207715                   0.018633   \n",
-      "89                   0.000000                   0.392546   \n",
-      "90                   0.117389                   0.781941   \n",
-      "91                   0.240902                   0.981174   \n",
-      "92                   0.006109                   0.016267   \n",
+      "88                   0.000000                   0.561562   \n",
+      "89                   0.055792                   0.097906   \n",
+      "90                   0.009297                   0.259832   \n",
+      "91                   0.196190                   0.040980   \n",
+      "92                   0.000000                   0.333420   \n",
       "\n",
       "    VGG_Embedding_Element_510  VGG_Embedding_Element_511  \n",
-      "0                    0.089064                   0.000000  \n",
-      "1                    0.211084                   0.238225  \n",
-      "2                    0.427169                   0.000000  \n",
-      "3                    1.322474                   0.677609  \n",
-      "4                    0.201122                   0.000000  \n",
+      "0                    0.130220                   0.024219  \n",
+      "1                    0.032121                   0.027089  \n",
+      "2                    0.252122                   0.006022  \n",
+      "3                    0.122601                   0.000000  \n",
+      "4                    2.300909                   0.151730  \n",
       "..                        ...                        ...  \n",
-      "88                   0.334320                   0.010076  \n",
-      "89                   0.002490                   0.000000  \n",
-      "90                   0.247370                   0.121276  \n",
-      "91                   1.254761                   0.000000  \n",
-      "92                   2.911038                   0.000000  \n",
+      "88                   0.201122                   0.000000  \n",
+      "89                   0.191465                   0.021248  \n",
+      "90                   0.670181                   0.000000  \n",
+      "91                   0.050319                   0.000000  \n",
+      "92                   0.056495                   0.000000  \n",
       "\n",
-      "[1489 rows x 4893 columns]\n"
+      "[1489 rows x 516 columns]\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,15 +223,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator SVC from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction time in minutes:  9.1552734375e-06\n",
-      "Prediction time per image in minutes:  6.103515625e-07\n"
+      "Prediction time in minutes:  0.04087830384572347\n",
+      "Prediction time per image in minutes:  2.7453528439035236e-05\n"
      ]
     }
    ],
@@ -256,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
