--- a/Code/Classification/SVM/Fit_SVM_Classifier_All_Features_PCA.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_All_Features_PCA.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:26:14.805068Z",
-     "iopub.status.busy": "2024-04-08T06:26:14.804604Z",
-     "iopub.status.idle": "2024-04-08T06:26:16.647164Z",
-     "shell.execute_reply": "2024-04-08T06:26:16.646297Z"
+     "iopub.execute_input": "2024-04-14T17:00:04.803735Z",
+     "iopub.status.busy": "2024-04-14T17:00:04.803262Z",
+     "iopub.status.idle": "2024-04-14T17:00:08.984420Z",
+     "shell.execute_reply": "2024-04-14T17:00:08.983203Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:26:16.651177Z",
-     "iopub.status.busy": "2024-04-08T06:26:16.650869Z",
-     "iopub.status.idle": "2024-04-08T06:26:16.654656Z",
-     "shell.execute_reply": "2024-04-08T06:26:16.653950Z"
+     "iopub.execute_input": "2024-04-14T17:00:08.991213Z",
+     "iopub.status.busy": "2024-04-14T17:00:08.989977Z",
+     "iopub.status.idle": "2024-04-14T17:00:08.995676Z",
+     "shell.execute_reply": "2024-04-14T17:00:08.994632Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:26:16.658541Z",
-     "iopub.status.busy": "2024-04-08T06:26:16.658309Z",
-     "iopub.status.idle": "2024-04-08T06:26:16.661870Z",
-     "shell.execute_reply": "2024-04-08T06:26:16.661183Z"
+     "iopub.execute_input": "2024-04-14T17:00:09.001211Z",
+     "iopub.status.busy": "2024-04-14T17:00:09.000379Z",
+     "iopub.status.idle": "2024-04-14T17:00:09.005453Z",
+     "shell.execute_reply": "2024-04-14T17:00:09.004399Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:26:16.666236Z",
-     "iopub.status.busy": "2024-04-08T06:26:16.665923Z",
-     "iopub.status.idle": "2024-04-08T06:26:18.626372Z",
-     "shell.execute_reply": "2024-04-08T06:26:18.625579Z"
+     "iopub.execute_input": "2024-04-14T17:00:09.011523Z",
+     "iopub.status.busy": "2024-04-14T17:00:09.010418Z",
+     "iopub.status.idle": "2024-04-14T17:00:12.211158Z",
+     "shell.execute_reply": "2024-04-14T17:00:12.209646Z"
     }
    },
    "outputs": [
@@ -212,10 +212,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:26:18.673494Z",
-     "iopub.status.busy": "2024-04-08T06:26:18.672941Z",
-     "iopub.status.idle": "2024-04-08T06:26:18.838090Z",
-     "shell.execute_reply": "2024-04-08T06:26:18.837326Z"
+     "iopub.execute_input": "2024-04-14T17:00:12.252066Z",
+     "iopub.status.busy": "2024-04-14T17:00:12.251509Z",
+     "iopub.status.idle": "2024-04-14T17:00:12.427755Z",
+     "shell.execute_reply": "2024-04-14T17:00:12.426821Z"
     }
    },
    "outputs": [],
@@ -235,10 +235,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:26:18.842179Z",
-     "iopub.status.busy": "2024-04-08T06:26:18.841982Z",
-     "iopub.status.idle": "2024-04-08T09:21:35.051356Z",
-     "shell.execute_reply": "2024-04-08T09:21:35.050596Z"
+     "iopub.execute_input": "2024-04-14T17:00:12.432516Z",
+     "iopub.status.busy": "2024-04-14T17:00:12.432321Z",
+     "iopub.status.idle": "2024-04-14T18:54:20.224762Z",
+     "shell.execute_reply": "2024-04-14T18:54:20.223659Z"
     }
    },
    "outputs": [
@@ -246,24 +246,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time in minutes:  174.87414067983627\n",
-      "Training time per image in minutes:  0.02913112455103053\n"
+      "Training time in minutes:  113.50901206731797\n",
+      "Training time per image in minutes:  0.018908714320725967\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy of best model:  1.0\n",
-      "Mean cross validated accuracy of best model:  0.5032482653344436\n"
+      "Train accuracy of best model:  0.9985007496251874\n",
+      "Mean cross validated accuracy of best model:  0.7706133777407715\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hyperparameters searched:  {'c_values': array([1.e-01, 1.e+00, 1.e+01, 1.e+02]), 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': array([1.e-01, 1.e+00, 1.e+01, 1.e+02]), 'degree_grid': [2, 3, 5, 7], 'k_folds': 5}\n",
-      "Tuned hyperparameters:  {'C': 0.09999999999999999, 'degree': 2, 'gamma': 0.09999999999999999, 'kernel': 'poly'}\n"
+      "Hyperparameters searched:  {'c_values': [0.001, 0.01, 0.1, 1], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'C': 1, 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
      ]
     }
    ],
