--- a/Code/Classification/SVM/Fit_SVM_Classifier_Individual_Features_PCA.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_Individual_Features_PCA.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:25:54.920859Z",
-     "iopub.status.busy": "2024-04-08T06:25:54.920376Z",
-     "iopub.status.idle": "2024-04-08T06:25:56.665732Z",
-     "shell.execute_reply": "2024-04-08T06:25:56.664907Z"
+     "iopub.execute_input": "2024-04-14T17:00:10.278889Z",
+     "iopub.status.busy": "2024-04-14T17:00:10.278427Z",
+     "iopub.status.idle": "2024-04-14T17:00:12.356344Z",
+     "shell.execute_reply": "2024-04-14T17:00:12.355523Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:25:56.668456Z",
-     "iopub.status.busy": "2024-04-08T06:25:56.668141Z",
-     "iopub.status.idle": "2024-04-08T06:25:56.672360Z",
-     "shell.execute_reply": "2024-04-08T06:25:56.671287Z"
+     "iopub.execute_input": "2024-04-14T17:00:12.361187Z",
+     "iopub.status.busy": "2024-04-14T17:00:12.360721Z",
+     "iopub.status.idle": "2024-04-14T17:00:12.364541Z",
+     "shell.execute_reply": "2024-04-14T17:00:12.363872Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:25:56.676229Z",
-     "iopub.status.busy": "2024-04-08T06:25:56.675428Z",
-     "iopub.status.idle": "2024-04-08T06:25:56.680583Z",
-     "shell.execute_reply": "2024-04-08T06:25:56.679532Z"
+     "iopub.execute_input": "2024-04-14T17:00:12.368653Z",
+     "iopub.status.busy": "2024-04-14T17:00:12.368449Z",
+     "iopub.status.idle": "2024-04-14T17:00:12.372008Z",
+     "shell.execute_reply": "2024-04-14T17:00:12.371315Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:25:56.684260Z",
-     "iopub.status.busy": "2024-04-08T06:25:56.683488Z",
-     "iopub.status.idle": "2024-04-08T06:25:59.032014Z",
-     "shell.execute_reply": "2024-04-08T06:25:59.031250Z"
+     "iopub.execute_input": "2024-04-14T17:00:12.376615Z",
+     "iopub.status.busy": "2024-04-14T17:00:12.376356Z",
+     "iopub.status.idle": "2024-04-14T17:00:16.739591Z",
+     "shell.execute_reply": "2024-04-14T17:00:16.738492Z"
     }
    },
    "outputs": [
@@ -244,10 +244,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:25:59.082954Z",
-     "iopub.status.busy": "2024-04-08T06:25:59.082387Z",
-     "iopub.status.idle": "2024-04-08T06:25:59.154374Z",
-     "shell.execute_reply": "2024-04-08T06:25:59.153644Z"
+     "iopub.execute_input": "2024-04-14T17:00:16.803925Z",
+     "iopub.status.busy": "2024-04-14T17:00:16.803012Z",
+     "iopub.status.idle": "2024-04-14T17:00:16.904002Z",
+     "shell.execute_reply": "2024-04-14T17:00:16.903006Z"
     }
    },
    "outputs": [
@@ -3506,10 +3506,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:25:59.160464Z",
-     "iopub.status.busy": "2024-04-08T06:25:59.160267Z",
-     "iopub.status.idle": "2024-04-08T06:25:59.418961Z",
-     "shell.execute_reply": "2024-04-08T06:25:59.418208Z"
+     "iopub.execute_input": "2024-04-14T17:00:16.915076Z",
+     "iopub.status.busy": "2024-04-14T17:00:16.914389Z",
+     "iopub.status.idle": "2024-04-14T17:00:19.810060Z",
+     "shell.execute_reply": "2024-04-14T17:00:19.808564Z"
     }
    },
    "outputs": [],
@@ -3529,10 +3529,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-08T06:25:59.423299Z",
-     "iopub.status.busy": "2024-04-08T06:25:59.423101Z",
-     "iopub.status.idle": "2024-04-08T14:05:03.713694Z",
-     "shell.execute_reply": "2024-04-08T14:05:03.712343Z"
+     "iopub.execute_input": "2024-04-14T17:00:19.817688Z",
+     "iopub.status.busy": "2024-04-14T17:00:19.817080Z",
+     "iopub.status.idle": "2024-04-14T18:39:44.658784Z",
+     "shell.execute_reply": "2024-04-14T18:39:44.657654Z"
     }
    },
    "outputs": [
@@ -3540,24 +3540,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time in minutes:  457.69495677550634\n",
-      "Training time per image in minutes:  0.07624437061061241\n"
+      "Training time in minutes:  96.81925565401713\n",
+      "Training time per image in minutes:  0.016128478369817945\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy of best model:  1.0\n",
-      "Mean cross validated accuracy of best model:  0.5797078823202886\n"
+      "Train accuracy of best model:  0.999000499750125\n",
+      "Mean cross validated accuracy of best model:  0.7706115736885929\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hyperparameters searched:  {'c_values': array([1.e-01, 1.e+00, 1.e+01, 1.e+02]), 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': array([1.e-01, 1.e+00, 1.e+01, 1.e+02]), 'degree_grid': [2, 3, 5, 7], 'k_folds': 5}\n",
-      "Tuned hyperparameters:  {'C': 0.09999999999999999, 'degree': 2, 'gamma': 0.09999999999999999, 'kernel': 'poly'}\n"
+      "Hyperparameters searched:  {'c_values': [0.001, 0.01, 0.1, 1], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'C': 1, 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
      ]
     }
    ],
