--- a/Code/Classification/SVM/SVM_Predictions_Individual_Features_PCA.ipynb
+++ b/Code/Classification/SVM/SVM_Predictions_Individual_Features_PCA.ipynb
@@ -252,8 +252,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction time in minutes:  0.10885909795761109\n",
-      "Prediction time per image in minutes:  7.310886363842249e-05\n"
+      "Prediction time in minutes:  0.15348895390828451\n",
+      "Prediction time per image in minutes:  0.00010308190322920384\n"
      ]
     }
    ],
